compiler-testsuite/crates/compiler-test/snapshots/lexer/output/example_1.snap
---
source: crates/compiler-test/src/lexer.rs
expression: token
---
Token {
    lexeme: "Hello",
    ty: Identifier,
    span: Span {
        start: 0,
        end: 4,
    },
}
