compiler-testsuite/crates/compiler-test/snapshots/lexer/output/snap@example_4.snap
---
source: crates/compiler-test/src/lexer.rs
expression: token
---
[
    Token {
        lexeme: "fun",
        ty: FuncDecl,
        span: Span {
            start: 0,
            end: 2,
        },
    },
    Token {
        lexeme: "f1",
        ty: Identifier,
        span: Span {
            start: 4,
            end: 5,
        },
    },
    Token {
        lexeme: "->",
        ty: Arrow,
        span: Span {
            start: 7,
            end: 8,
        },
    },
    Token {
        lexeme: "1",
        ty: NatLit,
        span: Span {
            start: 10,
            end: 10,
        },
    },
    Token {
        lexeme: ";",
        ty: Semicolon,
        span: Span {
            start: 11,
            end: 11,
        },
    },
    Token {
        lexeme: "fun",
        ty: FuncDecl,
        span: Span {
            start: 13,
            end: 15,
        },
    },
    Token {
        lexeme: "f2",
        ty: Identifier,
        span: Span {
            start: 17,
            end: 18,
        },
    },
    Token {
        lexeme: "nat",
        ty: NatDecl,
        span: Span {
            start: 20,
            end: 22,
        },
    },
    Token {
        lexeme: "x",
        ty: Identifier,
        span: Span {
            start: 24,
            end: 24,
        },
    },
    Token {
        lexeme: "->",
        ty: Arrow,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        lexeme: "T",
        ty: BoolLit,
        span: Span {
            start: 29,
            end: 29,
        },
    },
    Token {
        lexeme: "?",
        ty: QuestionMark,
        span: Span {
            start: 31,
            end: 31,
        },
    },
    Token {
        lexeme: "x",
        ty: Identifier,
        span: Span {
            start: 33,
            end: 33,
        },
    },
    Token {
        lexeme: "-",
        ty: Invalid,
        span: Span {
            start: 35,
            end: 35,
        },
    },
    Token {
        lexeme: "1",
        ty: NatLit,
        span: Span {
            start: 37,
            end: 37,
        },
    },
    Token {
        lexeme: ":",
        ty: Colon,
        span: Span {
            start: 39,
            end: 39,
        },
    },
    Token {
        lexeme: "0",
        ty: NatLit,
        span: Span {
            start: 41,
            end: 41,
        },
    },
    Token {
        lexeme: ";",
        ty: Semicolon,
        span: Span {
            start: 42,
            end: 42,
        },
    },
    Token {
        lexeme: "fun",
        ty: FuncDecl,
        span: Span {
            start: 44,
            end: 46,
        },
    },
    Token {
        lexeme: "f3",
        ty: Identifier,
        span: Span {
            start: 48,
            end: 49,
        },
    },
    Token {
        lexeme: "bool",
        ty: BoolDecl,
        span: Span {
            start: 51,
            end: 54,
        },
    },
    Token {
        lexeme: "x",
        ty: Identifier,
        span: Span {
            start: 56,
            end: 56,
        },
    },
    Token {
        lexeme: "->",
        ty: Arrow,
        span: Span {
            start: 58,
            end: 59,
        },
    },
    Token {
        lexeme: "T",
        ty: BoolLit,
        span: Span {
            start: 61,
            end: 61,
        },
    },
    Token {
        lexeme: "?",
        ty: QuestionMark,
        span: Span {
            start: 63,
            end: 63,
        },
    },
    Token {
        lexeme: "x",
        ty: Identifier,
        span: Span {
            start: 65,
            end: 65,
        },
    },
    Token {
        lexeme: "&",
        ty: Ampersand,
        span: Span {
            start: 67,
            end: 67,
        },
    },
    Token {
        lexeme: "F",
        ty: BoolLit,
        span: Span {
            start: 69,
            end: 69,
        },
    },
    Token {
        lexeme: ":",
        ty: Colon,
        span: Span {
            start: 71,
            end: 71,
        },
    },
    Token {
        lexeme: "0",
        ty: NatLit,
        span: Span {
            start: 73,
            end: 73,
        },
    },
    Token {
        lexeme: ";",
        ty: Semicolon,
        span: Span {
            start: 74,
            end: 74,
        },
    },
    Token {
        lexeme: "1",
        ty: NatLit,
        span: Span {
            start: 76,
            end: 76,
        },
    },
    Token {
        lexeme: "?",
        ty: QuestionMark,
        span: Span {
            start: 78,
            end: 78,
        },
    },
    Token {
        lexeme: "f2",
        ty: Identifier,
        span: Span {
            start: 80,
            end: 81,
        },
    },
    Token {
        lexeme: "2",
        ty: NatLit,
        span: Span {
            start: 83,
            end: 83,
        },
    },
    Token {
        lexeme: ":",
        ty: Colon,
        span: Span {
            start: 85,
            end: 85,
        },
    },
    Token {
        lexeme: "1",
        ty: NatLit,
        span: Span {
            start: 87,
            end: 87,
        },
    },
]
